--- a/SecureWeb/.github/workflows/ci-cd.yml
+++ b/SecureWeb/.github/workflows/ci-cd.yml
@@ -12,12 +12,20 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
+
+      - name: Cache NuGet packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
 
       - name: Install Dependencies
         run: dotnet restore
@@ -28,5 +36,17 @@ jobs:
       - name: Run Tests
         run: dotnet test --no-build --verbosity normal
 
-      - name: Publish Artifacts (Jika diperlukan)
+      - name: Run Code Analysis
+        uses: github/codeql-action/analyze@v2
+
+      - name: Check for vulnerabilities
+        run: dotnet list package --vulnerable --include-transitive
+
+      - name: Publish Artifacts
         run: dotnet publish --configuration Release --output ./publish
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: webapp
+          path: ./publish
