--- a/SecureWeb/.github/workflows/ci-cd.yml
+++ b/SecureWeb/.github/workflows/ci-cd.yml
@@ -12,15 +12,15 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
       - name: Cache NuGet packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.nuget/packages
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
@@ -44,11 +44,12 @@ jobs:
         working-directory: SecureWeb
 
       - name: Publish Artifacts
-        run: dotnet publish --configuration Release --output ../publish
-        working-directory: SecureWeb
+        run: |
+          mkdir -p ../publish
+          dotnet publish SecureWeb/SecureWeb.csproj --configuration Release --no-build --output ../publish
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: webapp
           path: ./publish
