--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,10 @@ jobs:
           mkdir -p ../publish
           dotnet publish SecureWeb/SecureWeb.csproj --configuration Release --no-build --output ../publish
 
+      - name: Publish
+        run: dotnet publish -c Release -o publish
+        working-directory: SecureWeb
+            
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
