--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,14 +42,25 @@ jobs:
       - name: List directory contents
         run: ls -la
       
+      - name: Debug Information
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
+          echo "Git status:"
+          git status
+      
       - name: Backup
         if: success() && github.ref == 'refs/heads/main'
         run: |
           if [ -f "./backup.sh" ]; then
+            echo "backup.sh found, executing..."
             chmod +x ./backup.sh
             ./backup.sh
           else
-            echo "backup.sh not found"
+            echo "backup.sh not found in current directory"
+            echo "Searching for backup.sh:"
+            find . -name backup.sh
             exit 1
           fi
 
