--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,13 +42,20 @@ jobs:
     - name: Check for vulnerabilities
       run: dotnet list package --vulnerable --include-transitive
       working-directory: SecureWeb
-
+      
+    - name: List directory contents
+      run: |
+        echo "Current directory: $(pwd)"
+        echo "Directory contents:"
+        ls -R
+        
     - name: Run security scan
       uses: snyk/actions/dotnet@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         command: test
+        args: SecureWeb/SecureWeb.csproj
 
     - name: Run OWASP ZAP Scan
       uses: zaproxy/action-full-scan@v0.9.0
