--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -55,7 +55,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         command: test
-        args: --file=SecureWeb/SecureWeb.csproj    # Menggunakan format yang benar untuk argumen file
+        file: SecureWeb/SecureWeb.csproj    # Menggunakan 'file' alih-alih 'args'
 
     - name: Run OWASP ZAP Scan
       uses: zaproxy/action-full-scan@v0.9.0
