--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,13 +50,13 @@ jobs:
         ls -R
         
     - name: Run Snyk security scan
+      working-directory: SecureWeb
       uses: snyk/actions/dotnet@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         command: test
-        file: SecureWeb/SecureWeb.csproj    # Menggunakan 'file' alih-alih 'args'
-
+        
     - name: Run OWASP ZAP Scan
       uses: zaproxy/action-full-scan@v0.9.0
       with:
