--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,13 +49,13 @@ jobs:
         echo "Directory contents:"
         ls -R
         
-    - name: Run Snyk security scan
-      uses: snyk/actions/dotnet@master
+    - name: Change directory and run Snyk
+      run: |
+        cd SecureWeb
+        dotnet restore
+        snyk test
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        command: test
-        args: "--file=SecureWeb/SecureWeb.csproj --package-manager=nuget"
         
     - name: Run OWASP ZAP Scan
       uses: zaproxy/action-full-scan@v0.9.0
