--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,10 @@ jobs:
         echo "Current directory: $(pwd)"
         echo "Directory contents:"
         ls -R
+    - name: Install Snyk CLI
+      run: |
+        npm install -g snyk
+        snyk auth ${{ secrets.SNYK_TOKEN }}
         
     - name: Change directory and run Snyk
       run: |
